--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,7 @@
     <color name="butn">#130CB7</color>
     <color name="gradient"></color>
     <color name="bordrOnly"></color>
+    <color name="red">#F44336</color>
+    <color name="grey">#8A8A8A</color>
     <color name="trans">#00FFFFFF</color>
 </resources>
