--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/compname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
@@ -29,7 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/et_managename"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
@@ -42,7 +42,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
-        android:id="@+id/editTextPhone"
+        android:id="@+id/et_phnnum"
         android:layout_width="281dp"
         android:layout_height="48dp"
         android:layout_marginStart="40dp"
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <EditText
-        android:id="@+id/editTextPhone2"
+        android:id="@+id/et_ofnum"
         android:layout_width="291dp"
         android:layout_height="48dp"
         android:layout_marginStart="40dp"
@@ -97,10 +97,9 @@
         android:layout_marginLeft="40dp"
         android:layout_marginTop="30dp"
         android:text="@string/man_num"
-        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
+        app:layout_constraintBottom_toTopOf="@+id/et_phnnum"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
@@ -109,9 +108,9 @@
         android:layout_marginLeft="40dp"
         android:layout_marginTop="25dp"
         android:text="@string/land_num"
-        app:layout_constraintBottom_toTopOf="@+id/editTextPhone2"
+        app:layout_constraintBottom_toTopOf="@+id/et_ofnum"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
+        app:layout_constraintTop_toBottomOf="@+id/et_phnnum" />
 
     <TextView
         android:id="@+id/textView7"
@@ -122,10 +121,10 @@
         android:layout_marginTop="25dp"
         android:text="@string/off_address"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPhone2" />
+        app:layout_constraintTop_toBottomOf="@+id/et_ofnum" />
 
     <EditText
-        android:id="@+id/editTextTextPostalAddress"
+        android:id="@+id/et_address"
         android:layout_width="290dp"
         android:layout_height="48dp"
         android:layout_marginStart="40dp"
@@ -147,7 +146,7 @@
         android:layout_marginTop="30dp"
         android:text="@string/cat_type"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/et_address" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -157,7 +156,7 @@
         android:layout_marginLeft="44dp"
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress"
+        app:layout_constraintTop_toBottomOf="@+id/et_address"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
