--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
     <TextView
         android:id="@+id/textView10"
@@ -35,7 +35,7 @@
         app:layout_constraintStart_toEndOf="@+id/textView9" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn_login"
         android:layout_width="144dp"
         android:layout_height="49dp"
         android:layout_marginTop="70dp"
@@ -44,7 +44,7 @@
         app:backgroundTint="@color/butn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_password" />
 
     <TextView
         android:id="@+id/textView8"
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress2"
+        android:id="@+id/edit_Email"
         android:layout_width="290dp"
         android:layout_height="54dp"
         android:layout_marginTop="70dp"
@@ -71,7 +71,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <EditText
-        android:id="@+id/editTextTextPassword3"
+        android:id="@+id/edit_password"
         android:layout_width="290dp"
         android:layout_height="54dp"
         android:layout_marginTop="60dp"
@@ -80,7 +80,7 @@
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_Email" />
 
     <TextView
         android:id="@+id/textView7"
