--- a/app/src/main/res/layout/activity_music_form.xml
+++ b/app/src/main/res/layout/activity_music_form.xml
@@ -42,15 +42,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/et_managename"
+        android:id="@+id/et_managename1"
         android:layout_width="281dp"
         android:layout_height="48dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="96dp"
         android:ems="10"
         android:hint="@string/manname"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -65,7 +66,7 @@
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_managename" />
+        app:layout_constraintTop_toBottomOf="@+id/et_managename1" />
 
 
     <EditText
