--- a/app/src/main/res/layout/activity_music_form2.xml
+++ b/app/src/main/res/layout/activity_music_form2.xml
@@ -110,28 +110,15 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/createbtn"
         android:layout_width="121dp"
         android:layout_height="50dp"
         android:layout_marginTop="39dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginRight="60dp"
         android:background="@drawable/rounded_corner"
-        android:text="update"
+        android:onClick="submit"
+        android:text="create"
         app:backgroundTint="@color/butn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etmu_des" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="121dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="39dp"
-        android:background="@drawable/rounded_corner"
-        android:text="delete"
-        app:backgroundTint="@color/butn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etmu_des" />
 
