--- a/app/src/main/res/layout/layout_list.xml
+++ b/app/src/main/res/layout/layout_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:id="@+id/parent_layout"
     android:padding="10dp">
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:id="@+id/image"
