--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="bordrOnly"></color>
     <color name="red">#F44336</color>
     <color name="grey">#8A8A8A</color>
+    <color name="peacock">#000066</color>
     <color name="trans">#00FFFFFF</color>
 </resources>
